--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
   <meta name="keywords" content="Купить кухню в Беларуси с доставкой">
   <title>Кухни черри - заказать кухню от фабрики с экономией.</title>
   <link rel="stylesheet" property="stylesheet" href="css/main.min.css">
+  <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
   <script>
 
   </script>
@@ -26,13 +28,14 @@
       </div>
       <nav class="main-navigation">
         <ul>
-          <li><a href="#about">В чем экономия?</a></li>
+          <li><a href="#about">О нас</a></li>
           <li><a href="#gallery">Портфолио</a></li>
           <li><a href="#reviews">отзывы</a></li>
           <li><a href="#map">Как проехать?</a></li>
         </ul>
       </nav>
       <div class="contacts">
+        <a class="phone" href="tel:+375296758713">+37529 6758713</a>
         <a class="phone" href="tel:+375296417719">+37529 6417719</a>
         <a href="mailto:ofitserov.vladimir@gmail.com" class="mail">Отправить E-MAIL</a>
       </div>
@@ -42,10 +45,10 @@
         <h1 class="main-heading">Заводские кухни от фабрики по оптовым ценам.<br><span class="main-heading-advantage"> Экономия от 30 %*</span></h1>
         <p class="main-heading-footnote">*по сравнению с ценой в салонах</p>
         <form class="order-form" action="" method="POST" id="header-form" onsubmit="">
-          <h2>Как сэкономить?</h2>
+          <h2>Оставить заявку</h2>
           <input class="required" type="text" name="username" value="" placeholder="Введите имя*">
           <input class="required" type="tel" name="userphone" value="" placeholder="Телефон*">
-          <button class="order-btn order-btn-header" type="submit" name="btnSubmit">Узнать подробности</button>
+          <button class="order-btn order-btn-header" type="submit" name="btnSubmit">Отправить</button>
         </form>
       </div>
     </div>
@@ -53,12 +56,26 @@
    <main>
     <section class="about" id="about">
       <h2>О нас</h2>
-      <p class="bounceInDown wow">Мы компания с 20-летним опытом работы в производстве кухонной мебели. Мы всегда отличались высоким качеством среди конкурентов за счет новейшего оборудования и опытногго коллектива.
-      И сегодня мы приготовили уникальное предложение для Вас!</p>
-      <div class="low-price bounceInLeft wow">
+      <div class="about-text">
+        <p class="animate">Мы компания с 20-летним опытом работы в производстве кухонной мебели. Мы всегда отличались высоким качеством среди конкурентов за счет новейшего оборудования и опытного коллектива.
+        И сегодня мы приготовили уникальное предложение для Вас!</p>
+      </div>
+      <div class="manufacture-main">
+        <div class="manufacture-wrap">
+          <div class="manufacture-text">
+            <ul>
+              <li class="manufacture-text-item manufacture-text-item-1">Полный производственный цикл</li>
+              <li class="manufacture-text-item manufacture-text-item-2">ИМЕЕМ ВОЗМОЖНОСТЬ ИЗГОТОВЛЕНИЯ ЛЮБых кухонь ИЗ дсп, мдф, ПЛАСТИКА, акрила</li>
+              <li class="manufacture-text-item manufacture-text-item-3">новейшее оборудование и опытный коллектив</li>
+            </ul>
+          </div>
+          <div class="manufacture-img"></div>
+        </div>
+      </div>
+      <div class="animate low-price">
         <h2 id="low-price">Почему наши цены настолько привлекательны?</h2>
         <div class="low-price-item low-price-item-1">
-          <strong>Работа напрямую с фабрикой</strong>
+          <strong>Собственное производство</strong>
           <p class="item-description">Не нужно платить посредникам</p>
         </div>
         <div class="low-price-item low-price-item-2">
@@ -67,10 +84,10 @@
         </div>
         <div class="low-price-item low-price-item-3">
           <strong>Экономия на сборке</strong>
-          <p class="item-description">Мы НЕ оказываем услуг по сборке и монтажу кухонь. Соберите кухню сами, либо выберите мастера по нашей рекомендации</p>
+          <p class="item-description">Соберите кухню сами, либо выберите мастера по нашей рекомендации</p>
         </div>
       </div>
-      <div class="kitchen-look bounceInRight wow">
+      <div class="animate kitchen-look">
         <h2>Как выглядит ваша кухня при отгрузке</h2>
         <div class="kitchen-look-item kitchen-look-item-1">
           <strong>Коплектность</strong>
@@ -78,31 +95,44 @@
         </div>
         <div class="kitchen-look-item kitchen-look-item-2">
           <strong>Упаковка</strong>
-          <p class="item-description">Все фассады упакованы отдельно</p>
+          <p class="item-description">Все фасады упакованы отдельно</p>
         </div>
         <div class="kitchen-look-item kitchen-look-item-3">
           <strong>Присадка</strong>
-          <p class="item-description">Все элементы имееют необходимые отверстия для сборки</p>
+          <p class="item-description">Все элементы имеют необходимые отверстия для сборки</p>
         </div>
       </div>
     </section>
     <section class="gallery" id="gallery">
-      <h2>Фотогалерея, цены без сборки</h2>
-      <div class="gallery-order">
+      <h2>Топ 20 кухонь 2017 года</h2>
+      <div class="gallery-wrap">
+        <div class="kitchen-info"></div>
         <div class="slick-gallery">
-          <div><div class="price-wrap"><span class="kitchen-price">от 690 рублей</span><img src="img/1.jpg" alt=""></div></div>
-          <div><div class="price-wrap"><span class="kitchen-price">от 790 рублей</span><img data-lazy="img/2.jpg" alt=""></div></div>
-          <div><div class="price-wrap"><span class="kitchen-price">от 800 рублей</span><img data-lazy="img/3.jpg" alt=""></div></div>
-          <div><div class="price-wrap"><span class="kitchen-price">от 990 рублей</span><img data-lazy="img/5.jpg" alt=""></div></div>
-          <div><div class="price-wrap"><span class="kitchen-price">от 1100 рублей</span><img data-lazy="img/6.jpg" alt=""></div></div>
-          <div><div class="price-wrap"><span class="kitchen-price">от 1200 рублей</span><img data-lazy="img/7.jpg" alt=""></div></div>
-          <div><div class="price-wrap"><span class="kitchen-price">от 1300 рублей</span><img data-lazy="img/8.jpg" alt=""></div></div>
-          <div><div class="price-wrap"><span class="kitchen-price">от 1300 рублей</span><img data-lazy="img/9.jpg" alt=""></div></div>
-          <div><div class="price-wrap"><span class="kitchen-price">от 1500 рублей</span><img data-lazy="img/10.jpg" alt=""></div></div>
+          <!--div class="price-wrap"><span class="kitchen-price">от 790 рублей</span> </div>-->
+          <div name="Афродита"><img data-lazy="img/19-min.jpg" alt=""></div>
+          <div name="Наяда"><img data-lazy="img/21-min.jpg" alt=""></div>
+          <div name="Неса"><img data-lazy="img/22-min.jpg" alt=""></div>
+          <div name="Акесо"><img data-lazy="img/3-min.jpg" alt=""></div>
+          <div name="Эрифея"><img data-lazy="img/12-min.jpg" alt=""></div>
+          <div name="Галия"><img data-lazy="img/11-min.jpg" alt=""></div>
+          <div name="Ирида"><img data-lazy="img/16-min.jpg" alt=""></div>
+          <div name="Каллона"><img data-lazy="img/17-min.jpg" alt=""></div>
+          <div name="Мелиноя"><img data-lazy="img/18-min.jpg" alt=""></div>
+          <div name="Орфана"><img data-lazy="img/23-min.jpg" alt=""></div>
+          <div name="Селена"><img data-lazy="img/24-min.jpg" alt=""></div>
+          <div name="Тиэлла"><img data-lazy="img/25-min.jpg" alt=""></div>
+          <div name="Дия"><img data-lazy="img/14-min.jpg" alt=""></div>
+          <div name="Антея"><img data-lazy="img/7-min.jpg" alt=""></div>
+          <div name="Элпида"><img data-lazy="img/10-min.jpg" alt=""></div>
+          <div name="Фиона"><img data-lazy="img/13-min.jpg" alt=""></div>
+          <div name="Эрида"><img data-lazy="img/4-min.jpg" alt=""></div>
+          <div name="Морея"><img data-lazy="img/20-min.jpg" alt=""></div>
+          <div name="Алсеида"><img data-lazy="img/8-min.jpg" alt=""></div>
+          <div name="Дриада"><img data-lazy="img/15-min.jpg" alt=""></div>
         </div>
       </div>
     </section>
-    <section class="sheme-of-work bounceInLeft wow">
+    <section class="animate sheme-of-work">
       <h2>Схема работы</h2>
       <div class="sheme-of-work-item sheme-of-work-item-1">
         <strong>Проект</strong>
@@ -134,7 +164,7 @@
       <span class="plus plus4">+</span>
       <span class="plus plus5">+</span>
     </section>
-    <section class="call-back bounceInRight wow">
+    <section class="animate call-back">
       <h2>Есть вопросы? Перезвоним!</h2>
       <form class="order-form call-back-form" action="" method="post" id="call-back">
         <input class="required" type="tel" name="userphone" value="" placeholder="Введите номер телефона*">
@@ -143,49 +173,45 @@
     </section>
     <section class="reviews" id="reviews">
       <div class="reviews-wrap">
-      <h2>Что  думают о нас наши клиенты?</h2>
-        <div class="slick-reviews">
-          <div class="slick-review-item">
-            <div class="review-item review-item-1">
-              <p class="review-name">Татьяна, Минск</p>
-              <p class="review-content">
-                Долго выбирали с мужем кухню, ездили по мебельным центрам. В итоге в одном из салонов нам предложи хороший индивидуальный проект кухни, но стоила она 3500 рублей с установкой.
-                Случайно нашла в интернете Кухни Черри и сбросила им фото проекта. В итоге у ребят вышло 2300 руб. за такую же кухню, а собрал ее мой муж
-                самостоятельно. Для молодой семьи это существенная экономия. Рекомендую.
-              </p>
-            </div>
-            <div class="review-item review-item-2">
-              <p class="review-name">Ксения, Гродно</p>
-              <p class="review-content">
-                У меня в Гродно достаточно знакомых, кто занимается мебелью. Но решающим фактором в наше сложное время стала цена.
-                Кухня приехала в разобраном виде, полностью готовая к сборке. А мой знакомый сборщик все быстро собрал за отдельную плату.
-                По моим подсчетам я сэкономила себе на новый Iphone.
-              </p>
-            </div>
-          </div>
-          <div class="slick-review-item">
-            <div class="review-item review-item-3">
-              <p class="review-name">Александр, Жлобин</p>
-              <p class="review-content">
-                Работаю руками с самого детства, поэтому собрать кухню было не проблемой. Проекта у меня не было, я вызвал дизайнера, и на слудующий день он был у меня в Жлобине.
-                Проект согласовали на месте и я оставил предоплату. Через 14 дней моя кухня приехала и мы произвели окончательный расчет.
-                Могу сказать что все было сделано добротно и качественно, и хотя я не являютсь профессиональным сборщиком мебели, кухню установил легко.
-              </p>
-            </div>
-            <div class="review-item review-item-4">
-              <p class="review-name">Иван, минск</p>
-              <p class="review-content">
-                Работаю предпринимателем, и как любой здравомыслящий человек повелся на цену. Только вот собирать самому ничего не хотелось, привык больше руководить. Но это не оказалось проблемой, фабрика кухонь Черри предложили проверенных сборщиков, с которым я заключил отдельный договор.
-                Кухней и экономией доволен.
-              </p>
-            </div>
-          </div>
+        <h2>Что  думают о нас наши клиенты?</h2>
+        <div class="review-item review-item-1">
+          <p class="review-name">Татьяна, Минск</p>
+          <p class="review-content">
+            Долго выбирали с мужем кухню, ездили по мебельным центрам. В итоге в одном из салонов нам предложи хороший индивидуальный проект кухни, но стоила она 3500 рублей с установкой.
+            Случайно нашла в интернете Кухни Черри и сбросила им фото проекта. В итоге у ребят вышло 2300 руб. за такую же кухню, а собрал ее мой муж
+            самостоятельно. Для молодой семьи это существенная экономия. Рекомендую.
+          </p>
+        </div>
+        <div class="review-item review-item-2">
+          <p class="review-name">Ксения, Гродно</p>
+          <p class="review-content">
+            У меня в Гродно достаточно знакомых, кто занимается мебелью. Но решающим фактором в наше сложное время стала цена.
+            Кухня приехала в разобраном виде, полностью готовая к сборке. А мой знакомый сборщик все быстро собрал за отдельную плату.
+            По моим подсчетам я сэкономила себе на новый Iphone.
+          </p>
+        </div>
+
+        <div class="review-item review-item-3">
+          <p class="review-name">Александр, Жлобин</p>
+          <p class="review-content">
+            Работаю руками с самого детства, поэтому собрать кухню было не проблемой. Проекта у меня не было, я вызвал дизайнера, и на слудующий день он был у меня в Жлобине.
+            Проект согласовали на месте и я оставил предоплату. Через 14 дней моя кухня приехала и мы произвели окончательный расчет.
+            Могу сказать что все было сделано добротно и качественно, и хотя я не являютсь профессиональным сборщиком мебели, кухню установил легко.
+          </p>
+        </div>
+        <div class="review-item review-item-4">
+          <p class="review-name">Иван, Минск</p>
+          <p class="review-content">
+            Работаю предпринимателем, и как любой здравомыслящий человек повелся на цену. Только вот собирать самому ничего не хотелось, привык больше руководить. Но это не оказалось проблемой, фабрика кухонь Черри предложили проверенных сборщиков, с которым я заключил отдельный договор.
+            Кухней и экономией доволен.
+          </p>
         </div>
       </div>
     </section>
     <section class="make-order">
-      <div class="make-order-wrap bounceInUp wow">
+      <div class="animate make-order-wrap">
         <h2>Есть готовый проект? Отправляйте на просчет!</h2>
+        <h2>Нет проекта? Нарисуем и рассчитаем Вашу кухню за 3 часа!</h2>
         <form class="order-form make-order-form" id="file-form" action="test.php" method="post" enctype="multipart/form-data">
           <p>Заполните заявку и прикрепите файл с проектом</p>
           <input class="required" type="text" name="username" value="" placeholder="Имя*">
@@ -209,12 +235,15 @@
     <div class="main-footer-wrap">
       <div class="footer-row">
         <div class="contacts footer-contacts">
+          <a class="phone footer-phone" href="tel:+375296758713">+37529 6758713</a>
           <a class="phone footer-phone" href="tel:+375296417719">+37529 6417719</a>
           <a href="mailto:ofitserov.vladimir@gmail.com" class="mail">Отправить E-MAIL</a>
         </div>
         <div class="footer-logo">
           <a><img src="img/footer-logo.png" alt="kitchen-cherry"></a>
           <span class="footer-logo-text">Кухни Cherry</span>
+          <p>ЧТУП "Консигма-пак" г.Минск, Софьи Ковалевской 62</p>
+          <p>Работаем по всей Беларуси</p>
         </div>
       </div>
       <a class="ofitserov-web" alt="Разработано в ofitserov web studio" target="black" href="http://konsigmapack.by">Разработано</a>
@@ -228,6 +257,15 @@
       <button class="order-btn modal-order-btn" type="submit" name="btnSubmit">Стать диллером</button>
     </form>
   </div>
+  <div class="modal-gallery">
+    <button class="modal-gallery-close" type="button" title="Закрыть">Закрыть</button>
+    <p>Отличный выбор! Изготовим данную кухню для Вас по указанной стоимости.
+    По желанию можно изменить размеры, фассады, фурнитуру. Оставьте номер телефона и мы сделаем кухню Вашей мечты.</p>
+    <form class="order-form modal-order-form" id="modal-form-gallery" action="#" method="post">
+      <input class="required" type="tel" name="userphone" value="" placeholder="Телефон*">
+      <button class="order-btn modal-order-btn" type="submit" name="btnSubmit">Отправить</button>
+    </form>
+  </div>
   <div class="modal-success">
     <button class="modal-success-close" type="button" title="Закрыть">Закрыть</button>
     <h2>Ваша заявка принята!</h2>
@@ -237,9 +275,9 @@
     </p>
   </div>
   <div class="modal-overlay"></div>
-<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=ek-JfCdSzOcnTT3uSaY5dgz2eDGiGNTg&amp;width=100%25&amp;height=320&id=yandex-map&amp;lang=ru_RU&amp;sourceType=constructor&amp;scroll=false"></script>
+  <script src="js/main.min.js"></script>
+  <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=ek-JfCdSzOcnTT3uSaY5dgz2eDGiGNTg&amp;width=100%25&amp;height=320&id=yandex-map&amp;lang=ru_RU&amp;sourceType=constructor&amp;scroll=false"></script>
 <!-- Yandex.Metrika counter --> <script type="text/javascript"> (function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter42438469 = new Ya.Metrika({ id:42438469, clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true }); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = "https://mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks"); </script> <noscript><div><img src="https://mc.yandex.ru/watch/42438469" style="position:absolute; left:-9999px;" alt="" /></div></noscript> <!-- /Yandex.Metrika counter -->
-<script src="js/main.min.js"></script>
 
 </body>
 </html>
